# unparallel-parallelism

./: .gitignore  CMakeLists.txt  README.md  go
scripts/: run_me_first.sh
src/: vector_add.cu
src/cpp/: main.cpp  playground.cpp
src/cuda/: cuda_check.cuh  cuda_timer.cuh  device_vector.cuh  report1.nsys-rep  vector_add  vector_add.cu  vector_add.cuh
test/cpp/: test_playground.cpp
test/cuda/: test_vector_add.cu
